--- a/Handm.html
+++ b/Handm.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>ANN's Fashion</title>
-    <link href=".//resources/css/handm.css" rel="stylesheet">
+    <link href="handm.css" rel="stylesheet">
    <style>
     header{
         background-image: url("header.jpeg");
